count_of_tests_without_category has been added to get_tests_lists_context() method in views.py and to tests_lists.html template; new NB about no category has been added to test_edit.html template; renamed variables in get_tests_lists_context(): 	tags -> showing_tags, 	categories -> showing_categories, 	showing_tag_and_categories_amount -> showing_tags_and_categories_amount, 	showing_tests_amount -> showing_tests_per_one_column added variables in get_tests_lists_context(): 	all_tags_count, 	all_published_test_count, 	all_confirmed_categories_count, 	show_elision_marks_for_tags, 	show_elision_marks_for_categories. show_elision_marks_for_tag_or_categories variable has been removed from get_tests_lists_context(); tests_lists.html template has been accordingly corrected, also mistake in condition for show_elision_marks_for_tests defining has been fixed, and to tests_lists.html has been added showing or not showing elision marks for tests

--- a/octapp/static/octapp/css/tests_lists_style.sass
+++ b/octapp/static/octapp/css/tests_lists_style.sass
@@ -18,14 +18,19 @@
       cursor: pointer
       font-weight: normal
     .badge:last-child:not(:only-child)
+      text-align: middle
       display: block
       cursor: default
       padding: 0 4px
+      border: 1px solid gray
+      margin-top: -10px
       margin-left: 70px
       margin-right: 70px
       font-size: 18px
       text-align: center
-      background-color: #ffff90
+  .tests_list:nth-of-type(3), .tests_list:nth-of-type(4)
+    .badge:last-child:not(:only-child)
+      background-color: #f4f4f4
   a.category:hover, a:hover h2
     transition: all ease 0.2s
     color: orange
